Refactor UserRepository to use JsonUtils, add tests

--- a/LeasingCompanyMSTest/LeasingCompanyMSTest.csproj
+++ b/LeasingCompanyMSTest/LeasingCompanyMSTest.csproj
@@ -8,6 +8,16 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Remove="Json\users_test.json" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Include="Json\users_test.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
 		<PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
 		<PackageReference Include="MSTest.TestAdapter" Version="3.0.2" />
