--- a/LeasingCompanyMS/LeasingCompanyMS.csproj
+++ b/LeasingCompanyMS/LeasingCompanyMS.csproj
@@ -13,6 +13,7 @@
     <None Remove="Images\key-icon.png" />
     <None Remove="Images\user-icon.png" />
     <None Remove="Json\users.json" />
+	  <None Remove="Json\cars.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,6 +23,9 @@
     <Content Include="Json\users.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+	<Content Include="Json\cars.json">
+		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	</Content>
   </ItemGroup>
 
 </Project>
