--- a/LeasingCompanyMS/Json/leasings.json
+++ b/LeasingCompanyMS/Json/leasings.json
@@ -1,9 +1,16 @@
 [
     {
-        "Car": "1",
-        "User": "1",
-        "From": "2024-01-01T00:00:00-07:00",
-        "To": "2024-01-15T00:00:00-07:00",
+        "CarId": 0,
+        "User": "user",
+        "From": "2024-12-01T00:00:00",
+        "To": "2024-12-31T00:00:00",
+        "Conditions": ""
+    },
+    {
+        "CarId": 1,
+        "User": "michal",
+        "From": "2025-01-01T00:00:00",
+        "To": "2025-01-31T00:00:00",
         "Conditions": ""
     }
 
