--- a/LeasingCompanyMS/LeasingCompanyMS.csproj
+++ b/LeasingCompanyMS/LeasingCompanyMS.csproj
@@ -70,6 +70,11 @@
         <Page Update="Layouts\MainMenuView\MainMenuView.xaml">
             <Generator>MSBuild:Compile</Generator>
         </Page>
+        <Page Update="Pages\BrowseCarsPage\Components\NewLeasingDialogBox\NewLeasing.xaml">
+          <Generator>MSBuild:Compile</Generator>
+          <XamlRuntime>Wpf</XamlRuntime>
+          <SubType>Designer</SubType>
+        </Page>
     </ItemGroup>
 
     <ItemGroup>
