--- a/LeasingCompanyMS/LeasingCompanyMS.csproj
+++ b/LeasingCompanyMS/LeasingCompanyMS.csproj
@@ -34,6 +34,9 @@
         <Content Include="Json\leasings.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
+        <Content Include="Json\payments.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
     <ItemGroup>
