Add/fix repositories tests

--- a/LeasingCompanyMS/Json/leasings.json
+++ b/LeasingCompanyMS/Json/leasings.json
@@ -1,1 +1,145 @@
-[{"Id":"7bf48f19-2369-4983-b8dd-ac2c0e7fbd7e","UserId":"0","CarId":"e3fe5c51-e0fe-4752-bfd0-15e7cde62532","LeasingDurationInMonths":24,"DownPayment":11880,"ResidualValue":0,"YearlyMileageLimit":15000,"MonthlyLeaseInstallment":5653.89,"From":"2025-02-10T23:00:24.6741761+01:00","To":"2027-02-10T23:00:24.6742598+01:00","Conditions":null},{"Id":"4cdbc3a2-1dea-4b17-9eb3-92c1f813bf8e","UserId":"0","CarId":"253af3b8-303e-42e9-9982-17baf5c20272","LeasingDurationInMonths":24,"DownPayment":19800,"ResidualValue":0,"YearlyMileageLimit":15000,"MonthlyLeaseInstallment":9423.15,"From":"2025-02-10T23:00:28.8106183+01:00","To":"2027-02-10T23:00:28.8106291+01:00","Conditions":null},{"Id":"fe4b43c6-e008-4fa4-9ade-95e0f95dd29a","UserId":"0","CarId":"b8f9c88a-d8d7-456f-9129-c0e1101b7c1a","LeasingDurationInMonths":24,"DownPayment":33440,"ResidualValue":26752,"YearlyMileageLimit":10000,"MonthlyLeaseInstallment":6040.41,"From":"2025-02-11T00:01:47.792446+01:00","To":"2027-02-11T00:01:47.7924566+01:00","Conditions":null},{"Id":"fd713930-beb1-4606-97d1-9f008d22adeb","UserId":"0","CarId":"1c2f2f8d-ffb5-48f6-8697-59c01565a991","LeasingDurationInMonths":84,"DownPayment":74800,"ResidualValue":59840,"YearlyMileageLimit":7500,"MonthlyLeaseInstallment":6486.21,"From":"2025-02-11T00:02:02.4765017+01:00","To":"2032-02-11T00:02:02.4765047+01:00","Conditions":null},{"Id":"84be7b4d-7b7f-49b9-ad17-bf7ea818fb2f","UserId":"0","CarId":"35ba5d69-7f1d-4d68-a084-dff26b12233e","LeasingDurationInMonths":36,"DownPayment":11000,"ResidualValue":14850,"YearlyMileageLimit":7500,"MonthlyLeaseInstallment":3447.9,"From":"2025-02-11T00:03:18.9489531+01:00","To":"2028-02-11T00:03:18.9489582+01:00","Conditions":null},{"Id":"694850b2-33d1-453a-9ab7-a54f14375c12","UserId":"0","CarId":"8c87fc26-cf53-47ca-831b-e37f5cdbba53","LeasingDurationInMonths":24,"DownPayment":48400,"ResidualValue":19360,"YearlyMileageLimit":7500,"MonthlyLeaseInstallment":9369.76,"From":"2025-02-11T00:10:56.6153486+01:00","To":"2027-02-11T00:10:56.6153536+01:00","Conditions":null},{"Id":"fd9b5250-34dd-4017-b529-eebd2bc7e6c1","UserId":"0","CarId":"8a0d1a21-35a3-4380-94b9-84ec7c827b46","LeasingDurationInMonths":24,"DownPayment":11000,"ResidualValue":14850,"YearlyMileageLimit":7500,"MonthlyLeaseInstallment":4620.07,"From":"2025-02-11T02:03:53.7118074+01:00","To":"2027-02-11T02:03:53.71181+01:00","Conditions":null},{"Id":"29ff8e9c-15b1-45c5-a437-e70958c8e210","UserId":"0","CarId":"3b57b876-d4fa-44d3-b5e5-bc399b7f26a6","LeasingDurationInMonths":84,"DownPayment":96800,"ResidualValue":7260,"YearlyMileageLimit":10000,"MonthlyLeaseInstallment":3284.25,"From":"2025-02-11T02:07:02.3732673+01:00","To":"2032-02-11T02:07:02.3732711+01:00","Conditions":null},{"Id":"76c13e75-eb68-446b-9ce1-ad783671d903","UserId":"0","CarId":"e5f3aaff-20c5-43d9-bf3a-97572b56c3ea","LeasingDurationInMonths":36,"DownPayment":40480,"ResidualValue":9108,"YearlyMileageLimit":10000,"MonthlyLeaseInstallment":2125.13,"From":"2025-02-11T02:16:21.1232487+01:00","To":"2028-02-11T02:16:21.1232509+01:00","Conditions":null},{"Id":"a01311f4-c7eb-4e49-babc-5ebc257af9a4","UserId":"0","CarId":"9fc8c4d0-0b4f-4193-9958-d69a00067c0e","LeasingDurationInMonths":36,"DownPayment":83600,"ResidualValue":50160,"YearlyMileageLimit":7500,"MonthlyLeaseInstallment":11646.23,"From":"2025-02-11T16:21:55.7499058+01:00","To":"2028-02-11T16:21:55.749911+01:00","Conditions":null},{"Id":"4d04a3af-94d9-4644-9a9b-b92f8fe22173","UserId":"0","CarId":"af7a1d58-b8f1-4a83-a116-bd2220b7d8f5","LeasingDurationInMonths":24,"DownPayment":30800,"ResidualValue":41580,"YearlyMileageLimit":5000,"MonthlyLeaseInstallment":12872.47,"From":"2025-02-11T16:23:34.8016928+01:00","To":"2027-02-11T16:23:34.8016954+01:00","Conditions":null}]
+[
+  {
+    "Id": "7bf48f19-2369-4983-b8dd-ac2c0e7fbd7e",
+    "UserId": "0",
+    "CarId": "e3fe5c51-e0fe-4752-bfd0-15e7cde62532",
+    "LeasingDurationInMonths": 24,
+    "DownPayment": 11880,
+    "ResidualValue": 0,
+    "YearlyMileageLimit": 15000,
+    "MonthlyLeaseInstallment": 5653.89,
+    "From": "2025-02-10T23:00:24.6741761+01:00",
+    "To": "2027-02-10T23:00:24.6742598+01:00",
+    "Conditions": null
+  },
+  {
+    "Id": "4cdbc3a2-1dea-4b17-9eb3-92c1f813bf8e",
+    "UserId": "0",
+    "CarId": "253af3b8-303e-42e9-9982-17baf5c20272",
+    "LeasingDurationInMonths": 24,
+    "DownPayment": 19800,
+    "ResidualValue": 0,
+    "YearlyMileageLimit": 15000,
+    "MonthlyLeaseInstallment": 9423.15,
+    "From": "2025-02-10T23:00:28.8106183+01:00",
+    "To": "2027-02-10T23:00:28.8106291+01:00",
+    "Conditions": null
+  },
+  {
+    "Id": "fe4b43c6-e008-4fa4-9ade-95e0f95dd29a",
+    "UserId": "0",
+    "CarId": "b8f9c88a-d8d7-456f-9129-c0e1101b7c1a",
+    "LeasingDurationInMonths": 24,
+    "DownPayment": 33440,
+    "ResidualValue": 26752,
+    "YearlyMileageLimit": 10000,
+    "MonthlyLeaseInstallment": 6040.41,
+    "From": "2025-02-11T00:01:47.792446+01:00",
+    "To": "2027-02-11T00:01:47.7924566+01:00",
+    "Conditions": null
+  },
+  {
+    "Id": "fd713930-beb1-4606-97d1-9f008d22adeb",
+    "UserId": "0",
+    "CarId": "1c2f2f8d-ffb5-48f6-8697-59c01565a991",
+    "LeasingDurationInMonths": 84,
+    "DownPayment": 74800,
+    "ResidualValue": 59840,
+    "YearlyMileageLimit": 7500,
+    "MonthlyLeaseInstallment": 6486.21,
+    "From": "2025-02-11T00:02:02.4765017+01:00",
+    "To": "2032-02-11T00:02:02.4765047+01:00",
+    "Conditions": null
+  },
+  {
+    "Id": "84be7b4d-7b7f-49b9-ad17-bf7ea818fb2f",
+    "UserId": "0",
+    "CarId": "35ba5d69-7f1d-4d68-a084-dff26b12233e",
+    "LeasingDurationInMonths": 36,
+    "DownPayment": 11000,
+    "ResidualValue": 14850,
+    "YearlyMileageLimit": 7500,
+    "MonthlyLeaseInstallment": 3447.9,
+    "From": "2025-02-11T00:03:18.9489531+01:00",
+    "To": "2028-02-11T00:03:18.9489582+01:00",
+    "Conditions": null
+  },
+  {
+    "Id": "694850b2-33d1-453a-9ab7-a54f14375c12",
+    "UserId": "0",
+    "CarId": "8c87fc26-cf53-47ca-831b-e37f5cdbba53",
+    "LeasingDurationInMonths": 24,
+    "DownPayment": 48400,
+    "ResidualValue": 19360,
+    "YearlyMileageLimit": 7500,
+    "MonthlyLeaseInstallment": 9369.76,
+    "From": "2025-02-11T00:10:56.6153486+01:00",
+    "To": "2027-02-11T00:10:56.6153536+01:00",
+    "Conditions": null
+  },
+  {
+    "Id": "fd9b5250-34dd-4017-b529-eebd2bc7e6c1",
+    "UserId": "0",
+    "CarId": "8a0d1a21-35a3-4380-94b9-84ec7c827b46",
+    "LeasingDurationInMonths": 24,
+    "DownPayment": 11000,
+    "ResidualValue": 14850,
+    "YearlyMileageLimit": 7500,
+    "MonthlyLeaseInstallment": 4620.07,
+    "From": "2025-02-11T02:03:53.7118074+01:00",
+    "To": "2027-02-11T02:03:53.71181+01:00",
+    "Conditions": null
+  },
+  {
+    "Id": "29ff8e9c-15b1-45c5-a437-e70958c8e210",
+    "UserId": "0",
+    "CarId": "3b57b876-d4fa-44d3-b5e5-bc399b7f26a6",
+    "LeasingDurationInMonths": 84,
+    "DownPayment": 96800,
+    "ResidualValue": 7260,
+    "YearlyMileageLimit": 10000,
+    "MonthlyLeaseInstallment": 3284.25,
+    "From": "2025-02-11T02:07:02.3732673+01:00",
+    "To": "2032-02-11T02:07:02.3732711+01:00",
+    "Conditions": null
+  },
+  {
+    "Id": "76c13e75-eb68-446b-9ce1-ad783671d903",
+    "UserId": "0",
+    "CarId": "e5f3aaff-20c5-43d9-bf3a-97572b56c3ea",
+    "LeasingDurationInMonths": 36,
+    "DownPayment": 40480,
+    "ResidualValue": 9108,
+    "YearlyMileageLimit": 10000,
+    "MonthlyLeaseInstallment": 2125.13,
+    "From": "2025-02-11T02:16:21.1232487+01:00",
+    "To": "2028-02-11T02:16:21.1232509+01:00",
+    "Conditions": null
+  },
+  {
+    "Id": "a01311f4-c7eb-4e49-babc-5ebc257af9a4",
+    "UserId": "0",
+    "CarId": "9fc8c4d0-0b4f-4193-9958-d69a00067c0e",
+    "LeasingDurationInMonths": 36,
+    "DownPayment": 83600,
+    "ResidualValue": 50160,
+    "YearlyMileageLimit": 7500,
+    "MonthlyLeaseInstallment": 11646.23,
+    "From": "2025-02-11T16:21:55.7499058+01:00",
+    "To": "2028-02-11T16:21:55.749911+01:00",
+    "Conditions": null
+  },
+  {
+    "Id": "4d04a3af-94d9-4644-9a9b-b92f8fe22173",
+    "UserId": "0",
+    "CarId": "af7a1d58-b8f1-4a83-a116-bd2220b7d8f5",
+    "LeasingDurationInMonths": 24,
+    "DownPayment": 30800,
+    "ResidualValue": 41580,
+    "YearlyMileageLimit": 5000,
+    "MonthlyLeaseInstallment": 12872.47,
+    "From": "2025-02-11T16:23:34.8016928+01:00",
+    "To": "2027-02-11T16:23:34.8016954+01:00",
+    "Conditions": null
+  }
+]
